# polyscope-rs

./: .gitignore  2026-01-21-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIFFERENCES.md  LICENSE  README.md  todo.md
.github/workflows/: ci.yml  publish.yml
assets/: bunny.mesh
crates/polyscope/: Cargo.toml
crates/polyscope-core/: Cargo.toml
crates/polyscope-core/src/: error.rs  gizmo.rs  ground_plane.rs  group.rs  lib.rs  marching_cubes.rs  options.rs  pick.rs  quantity.rs  registry.rs  slice_plane.rs  ssao.rs  state.rs  structure.rs  tone_mapping.rs
crates/polyscope-render/: Cargo.toml
crates/polyscope-render/data/matcaps/: candy_b.hdr  candy_g.hdr  candy_k.hdr  candy_r.hdr  clay_b.hdr  clay_g.hdr  clay_k.hdr  clay_r.hdr  flat_b.hdr  flat_g.hdr  flat_k.hdr  flat_r.hdr  wax_b.hdr  wax_g.hdr  wax_k.hdr  wax_r.hdr
crates/polyscope-render/src/: buffer.rs  camera.rs  color_maps.rs  curve_network_render.rs  depth_peel_pass.rs  dual_quat.rs  engine.rs  error.rs  ground_plane.rs  lib.rs  materials.rs  oit_pass.rs  pick.rs  planar_shadow.rs  point_cloud_render.rs  reflection.rs  reflection_pass.rs  screenshot.rs  shader.rs  shadow_map.rs  slice_mesh_render.rs  slice_plane_render.rs  ssaa_pass.rs  ssao_pass.rs  surface_mesh_render.rs  tone_mapping.rs  vector_render.rs  volume_grid_render.rs
crates/polyscope-render/src/engine/: mod.rs  pick.rs  pipelines.rs  postprocessing.rs  rendering.rs  textures.rs
crates/polyscope-render/src/engine/pipelines/: effects.rs  mod.rs  structure.rs  volume.rs
crates/polyscope-render/src/shaders/: composite_peel.wgsl  curve_network_edge.wgsl  curve_network_tube.wgsl  curve_network_tube_compute.wgsl  depth_to_mask.wgsl  depth_update_peel.wgsl  gridcube.wgsl  ground_plane.wgsl  ground_stencil.wgsl  oit_composite.wgsl  pick.wgsl  pick_curve.wgsl  pick_curve_tube.wgsl  pick_gridcube.wgsl  pick_mesh.wgsl  point_sphere.wgsl  reflected_curve_network_tube.wgsl  reflected_mesh.wgsl  reflected_point_sphere.wgsl  shadow_blur.wgsl  shadow_map.wgsl  simple_mesh.wgsl  slice_plane.wgsl  ssaa_downsample.wgsl  ssao.wgsl  ssao_blur.wgsl  surface_mesh.wgsl  surface_mesh_oit.wgsl  surface_mesh_peel.wgsl  tone_map.wgsl  vector_arrow.wgsl
crates/polyscope-structures/: Cargo.toml
crates/polyscope-structures/src/: camera_view.rs  curve_network.rs  lib.rs  volume_grid.rs  volume_mesh.rs
crates/polyscope-structures/src/camera_view/: camera_parameters.rs  mod.rs
crates/polyscope-structures/src/curve_network/: mod.rs  quantities.rs
crates/polyscope-structures/src/floating/: color_image.rs  mod.rs  render_image.rs  scalar_image.rs
crates/polyscope-structures/src/point_cloud/: mod.rs  quantities.rs
crates/polyscope-structures/src/surface_mesh/: geometry.rs  intrinsic_vector_quantity.rs  mod.rs  one_form_quantity.rs  parameterization_quantity.rs  quantities.rs  quantity_methods.rs
crates/polyscope-structures/src/volume_grid/: mod.rs  scalar_quantity.rs
crates/polyscope-structures/src/volume_mesh/: color_quantity.rs  mod.rs  scalar_quantity.rs  slice_geometry.rs  vector_quantity.rs
crates/polyscope-ui/: Cargo.toml
crates/polyscope-ui/src/: color_bar.rs  gizmo.rs  imgui_integration.rs  integration.rs  lib.rs  panels.rs  quantity_ui.rs  selection_panel.rs  structure_ui.rs
crates/polyscope/examples/: demo.rs
crates/polyscope/src/: app.rs  camera_view.rs  curve_network.rs  floating.rs  gizmo.rs  groups.rs  headless.rs  init.rs  lib.rs  point_cloud.rs  screenshot.rs  slice_plane.rs  surface_mesh.rs  transform.rs  ui_sync.rs  volume_grid.rs  volume_mesh.rs
crates/polyscope/src/app/: input.rs  mod.rs  picking.rs  render.rs  render_capture.rs  render_init.rs  render_scene.rs  render_ui.rs
crates/polyscope/tests/: api_coverage_test.rs  basics_test.rs  headless_render_test.rs
docs/: architecture-differences.md  development-guide.md  feature-status.md  getting-started.md
docs/plans/: 2026-01-21-phase2-windowed-rendering.md  2026-01-21-phase3-point-cloud-rendering.md  2026-01-21-phase4-ui-design.md  2026-01-21-phase4-ui-implementation.md  2026-01-21-polyscope-rs-design.md  2026-01-22-curve-network-design.md  2026-01-22-curve-network-implementation.md  2026-01-22-phase5-surface-mesh-design.md  2026-01-22-phase5-surface-mesh-implementation.md  2026-01-23-ground-plane.md  2026-01-23-groups-ui.md  2026-01-23-phase7-advanced-features.md  2026-01-23-polygon-wireframe-support.md  2026-01-23-slice-planes-ui.md  2026-01-23-ui-enhancement-phase-a.md  2026-01-24-gizmo-rendering.md  2026-01-24-gizmos-ui.md  2026-01-24-reflections.md  2026-01-24-shadow-mode.md  2026-01-24-tone-mapping.md  2026-01-25-curve-network-tube-rendering.md  2026-01-25-gpu-picking-design.md  2026-01-25-gpu-picking-plan.md  2026-01-25-ground-reflections.md  2026-01-25-ground-shadows-design.md  2026-01-25-ground-shadows-plan.md  2026-01-25-ssao-implementation.md  2026-01-25-volume-mesh.md  2026-01-26-slice-plane-capping.md  2026-01-26-transparency-rendering.md  2026-01-27-code-cleanup.md  2026-01-27-proper-code-cleanup.md  2026-01-27-tier3-advanced-quantities.md  2026-01-27-upstream-follow-ups.md  2026-01-29-engine-refactor.md  2026-01-30-app-rs-split.md  2026-01-30-camera-navigation-modes.md  2026-01-30-matcap-materials.md  2026-01-30-rgba-color-support.md  2026-01-31-mesh-gpu-picking.md  (+6 more)
examples/: camera_view_demo.rs  curve_network_demo.rs  generate_screenshots.rs  ground_plane_demo.rs  groups_and_gizmos_demo.rs  materials_demo.rs  point_cloud_demo.rs  polygon_mesh_demo.rs  slice_plane_demo.rs  surface_mesh_demo.rs  transparency_demo.rs  volume_grid_demo.rs  volume_mesh_demo.rs
scripts/: extract_matcaps.py
