[workspace]
resolver = "2"
members = [
    "crates/polyscope-core",
    "crates/polyscope-render",
    "crates/polyscope-ui",
    "crates/polyscope-structures",
    "crates/polyscope",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/user/polyscope-rs"
authors = ["polyscope-rs contributors"]

[workspace.dependencies]
# Internal crates
polyscope-core = { path = "crates/polyscope-core" }
polyscope-render = { path = "crates/polyscope-render" }
polyscope-ui = { path = "crates/polyscope-ui" }
polyscope-structures = { path = "crates/polyscope-structures" }

# Math
glam = { version = "0.29", features = ["serde"] }

# Rendering
wgpu = "27"
winit = "0.30"

# UI (egui - pure Rust, no native dependencies)
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
transform-gizmo-egui = "0.8"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
ply-rs = "0.1"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"

# Testing
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
