[package]
name = "polyscope-core"
description = "Core abstractions for polyscope-rs: traits, registry, and state management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["visualization", "3d", "graphics"]
categories = ["visualization", "graphics"]

[dependencies]
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
bytemuck.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
