[package]
name = "polyscope-render"
description = "Rendering backend for polyscope-rs: wgpu engine, shaders, and materials"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
polyscope-core.workspace = true
glam.workspace = true
wgpu.workspace = true
winit.workspace = true
image.workspace = true
log.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
rand = "0.8"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
