[package]
name = "polyscope-structures"
description = "Structure implementations for polyscope-rs: meshes, point clouds, curves, volumes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
polyscope-core.workspace = true
polyscope-render.workspace = true
polyscope-ui.workspace = true
glam.workspace = true
wgpu.workspace = true
egui.workspace = true
ply-rs.workspace = true
log.workspace = true
thiserror.workspace = true
bytemuck.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
