[package]
name = "polyscope-ui"
description = "UI layer for polyscope-rs: egui integration and widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
polyscope-core.workspace = true
polyscope-render.workspace = true
glam.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
wgpu.workspace = true
winit.workspace = true
log.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
