[package]
name = "polyscope"
description = "A Rust-native 3D visualization library for geometric data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
polyscope-core.workspace = true
polyscope-render.workspace = true
polyscope-ui.workspace = true
polyscope-structures.workspace = true
glam.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
pollster.workspace = true
winit.workspace = true
wgpu.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
chrono = "0.4.43"

[dev-dependencies]
proptest.workspace = true
tobj.workspace = true

[[example]]
name = "surface_mesh_demo"
path = "../../examples/surface_mesh_demo.rs"

[[example]]
name = "curve_network_demo"
path = "../../examples/curve_network_demo.rs"

[[example]]
name = "camera_view_demo"
path = "../../examples/camera_view_demo.rs"

[[example]]
name = "volume_grid_demo"
path = "../../examples/volume_grid_demo.rs"

[[example]]
name = "volume_mesh_demo"
path = "../../examples/volume_mesh_demo.rs"

[[example]]
name = "slice_plane_demo"
path = "../../examples/slice_plane_demo.rs"

[[example]]
name = "transparency_demo"
path = "../../examples/transparency_demo.rs"

[[example]]
name = "point_cloud_demo"
path = "../../examples/point_cloud_demo.rs"

[[example]]
name = "groups_and_gizmos_demo"
path = "../../examples/groups_and_gizmos_demo.rs"

[[example]]
name = "ground_plane_demo"
path = "../../examples/ground_plane_demo.rs"

[[example]]
name = "materials_demo"
path = "../../examples/materials_demo.rs"

[lints]
workspace = true
